# uncruft

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/uncruft/: __init__.py  analyzer.py  categories.py  cleaner.py  cli.py  display.py  models.py  recursive_scanner.py  scanner.py
src/uncruft/ai/: __init__.py  conversation.py  download.py  menu.py  prompts.py  runtime.py  tools.py
src/uncruft/tui/: __init__.py  app.py  screens.py  styles.tcss  widgets.py
tests/: __init__.py  test_analyzer.py  test_categories.py  test_cleaner.py  test_cli.py  test_display.py  test_models.py  test_recursive_scanner.py  test_scanner.py
